--- a/db/somador_4bit.lpc.html
+++ b/db/somador_4bit.lpc.html
@@ -16,6 +16,22 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst9</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst8</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -98,13 +114,13 @@
 <TR >
 <TD >inst7</TD>
 <TD >3</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >2</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
